[gd_scene load_steps=4 format=3 uid="uid://dsnksdwq5c835"]

[ext_resource type="Script" path="res://overlays/end_level_overlay.gd" id="1_3hbkg"]
[ext_resource type="Theme" uid="uid://w636wi8bnkpk" path="res://themes/default_theme.tres" id="1_cuh6a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_likfn"]
bg_color = Color(0, 1, 1, 0.337255)

[node name="EndLevelOverlay" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_3hbkg")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cuh6a")
theme_override_styles/panel = SubResource("StyleBoxFlat_likfn")

[node name="Message" type="Label" parent="."]
offset_left = 3.0
offset_top = 65.0
offset_right = 803.0
offset_bottom = 91.0
theme = ExtResource("1_cuh6a")
theme_override_font_sizes/font_size = 50
text = "Game Over"
horizontal_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 2.0
offset_top = 222.0
offset_right = 802.0
offset_bottom = 272.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_cuh6a")
theme_override_constants/separation = 30
alignment = 1

[node name="LevelSelect" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Level Select"

[node name="Continue" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "Continue"

[node name="Retry" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Retry
"

[connection signal="button_up" from="HBoxContainer/LevelSelect" to="." method="_on_level_select_button_up"]
[connection signal="button_up" from="HBoxContainer/Continue" to="." method="_on_continue_button_up"]
[connection signal="button_up" from="HBoxContainer/Retry" to="." method="_on_retry_button_up"]
